--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/exercise1?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/exerciseCats?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=spring
 spring.jpa.hibernate.ddl-auto=create-drop
